theme: fix spacing for "Log in as another user" button
At some point the Not Listed? button was moved to align it better
in the login screen.  That nudging made the "Log in as another user"
button (which uses the same style class) align worse.

This commit removes the padding at the unlock screen.

https://bugzilla.gnome.org/show_bug.cgi?id=704318

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -2320,6 +2320,9 @@ StScrollBar StButton#vhandle:active {
     font-weight: bold;
     color: #666666;
     padding-top: 1em;
+}
+
+.login-dialog-user-selection-box .login-dialog-not-listed-label {
     padding-left: 2px;
 }
 
